# ComfyUI-Workflow-Models-Downloader

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  __init__.py  database.py  download_queue.py  install.py  migrate_to_sqlite.py  model_catalog.json  pyproject.toml  reliability.py  repositories.py  requirements.txt  search_utils.py  security.py  server.py  storage.py  update_metadata.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: publish.yml
docs/: implementation-plan.md  sqlite-migration-plan.md
js/: workflow-models-downloader.js
metadata/: model-aliases.json  popular-models.json
